Fix on code blocks scroll overflow
Former-commit-id: 7c2964c24b1b43a56336ddc8f1f86dde60a52f68

--- a/styles/components/blocks/code.scss
+++ b/styles/components/blocks/code.scss
@@ -12,7 +12,7 @@
   pre {
     white-space: pre;
     max-width: 100%;
-    overflow: hidden;
+    overflow: auto;
     overflow-x: scroll;
     overflow-x: overlay;
   }
